# wptc

./: .gitignore  Cargo.toml  README.md  compiler.py  pyproject.toml  readme.md  requirements-dev.txt  requirements.txt  setup.py  testbuild.yaml  testbuild_novel.yaml  testbuild_short.yaml
builds/: manuscript.rtf  test_manuscript.docx  testbuild.yaml
markdown_manuscript_formatter.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
mdmf-rs/: Cargo.toml
mdmf-rs/src/: config.rs
my_cli_tool/: main.py
src/: args.rs  config.rs  docx_builder.rs  main.rs
src/markdown_manuscript_formatter/: main.py
src/markdown_manuscript_formatter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/my_cli_tool/: main.py
tests/: chapter1_part1.md  chapter1_part2.md  lorem.md  prologue.md  test_config.yaml  test_content_processing.py  test_integration.py  test_main.py  testbuild_novel.yaml  testbuild_short.yaml
