[package]
name = "mdmf"
version = "0.2.0"
edition = "2024"
description = "Formats markdown text files into standard manuscript format for submissions. Works for short stories and multi-part novels."
license = "MIT" # Or your preferred license, required for crates.io

[[bin]]
name = "mdmf"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
docx-rs = "0.4.19"
pulldown-cmark = "0.13.3"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
