[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "markdown-manuscript-formatter"
version = "0.2.0"
authors = [
  { name="Karl Gantner", email="karl@karlgantner.com" }, # Replace with your details
]
description = "A Python script to format markdown files into standard manuscript format for submitting fiction."
readme = "readme.md"
requires-python = ">=3.8"
license = { text = "MIT License" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "PyYAML",
    "python-docx",
    "smartypants",
]

[tool.setuptools]
package-dir = { "" = "src" }

[project.scripts]
mdmf = "markdown_manuscript_formatter.main:main"